--- a/src/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
+++ b/src/app/(marketing)/blog/top-5-llm-of-all-time/page.mdx
@@ -7,6 +7,7 @@ export const blog = {
   title: "Top 5 LLM of all time",
   description:
     "Explore the latest AI tools and applications that are revolutionizing various industries. From image generation to natural language processing, AI is changing the way we think and interact with the world.",
+  image: Thumbnail
 };
 
 export const metadata = {
