--- a/src/app/(marketing)/blog/how-companies-are-working-without-ai/page.mdx
+++ b/src/app/(marketing)/blog/how-companies-are-working-without-ai/page.mdx
@@ -1,5 +1,4 @@
 import { BlogLayout } from "@/components/blog-layout";
-import Thumbnail from "./thumbnail.jpeg";
 
 export const blog = {
   author: { name: "Manu Arora", src: "/avatar.jpeg" },
@@ -7,7 +6,7 @@ export const blog = {
   title: "How companies are working without AI",
   description:
     "Explore the latest AI tools and applications that are revolutionizing various industries. From image generation to natural language processing, AI is changing the way we think and interact with the world.",
-  image: Thumbnail,
+  image: "https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3",
 };
 export const metadata = {
   title: blog.title,
